adicionado link aos projetos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 <body class="bg-gradient-to-b from-[#001D40] via-[#192F49] to-[#0e2036]   m-10"
     style="font-family: 'Space Grotesk', sans-serif;">
     <div class="reveal" style="position: fixed; right: 0;">
-        <button class="flex" style="border: none;" onclick="changeLanguage('pt')"><img src="./assets/images/brazil.svg" alt=""></button>
-        <button class="flex" style="border: none;" onclick="changeLanguage('en')"><img src="./assets/images/unitedStates.svg"></button>
+        <button class="flex" style="border: none;" onclick="changeLanguage('pt')"><img src="./assets/images/brazil.svg"
+                alt=""></button>
+        <button class="flex" style="border: none;" onclick="changeLanguage('en')"><img
+                src="./assets/images/unitedStates.svg"></button>
 
     </div>
     <header class="reveal flex justify-center text-white" style="visibility: hidden;">
@@ -35,10 +37,15 @@
         <div class="flex justify-center">
             <img src="./assets/images/image 1.svg" alt="avatar" class="flex justify-center">
         </div>
-        <div class="flex m-auto justify-center p-1 bg-[#00244F] text-white rounded-full space-x-2 w-[17rem]">
-            <img src="./assets/images/Ellipse 1.svg">
-            <span id="status">Available for opportunies</span>
+        <div class="flex justify-center">
+            <div class="flex justify-center space-x-2 p-1 bg-[#00244F] text-white rounded-full items-center w-full"
+                style="width: 20rem;">
+                <img src="./assets/images/Ellipse 1.svg" class="p-1">
+                <span id="status" class="white-space-nowrap"></span>
+            </div>
         </div>
+    </div>
+
     </div>
     <main>
         <section class="reveal" style="visibility: hidden;">
@@ -72,7 +79,7 @@
                         </svg>
 
                     </span>
-                    <span id="button-talk">Let's talk</span>
+                    <span id="button-talk" class="white-space-nowrap">Let's talk</span>
                     <ul>
                         <li>
                             <a href="https://w.app/LyUjEZ">
@@ -224,72 +231,76 @@
                 Recently Projects
             </h1>
 
-            <div class="reveal text-white my-[4rem] p-5 rounded-md"
-                style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%); visibility: hidden;">
-                <div class="flex justify-center m-5">
-                    <img src="./assets/images/foto.svg" alt="">
-                </div>
-                <div class="text-white text-opacity-60 text-center text-xs m-5">
-                    <p id="project1">A responsive design allows users to enter a URL, generating a QR code on the screen
-                        for
-                        convenient
-                        use.</p>
-                </div>
-                <div class="flex justify-center" style="margin-top: 3rem;">
-                    <button class="flex space-x-3"
-                        style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
-                        <p class="button-project">
-                            View the project
-                        </p>
-                        <div>
-                            <img src="./assets/images/Vector.svg" alt="">
-                        </div>
-                    </button>
-                </div>
-            </div>
-            <div class="reveal text-white my-[4rem] p-5 rounded-md"
-                style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%); visibility: hidden;">
-                <div class="flex justify-center m-5">
-                    <img src="./assets/images/Screenshot_2 1.svg" alt="">
-                </div>
-                <div class="text-white text-opacity-60 text-center text-xs m-5">
-                    <p id="project2">In a responsive design, users can interactively choose a numerical rating from 1 to
-                        5 stars.
-                    </p>
-                </div>
-                <div class="flex justify-center" style="margin-top: 3rem;">
-                    <button class="flex space-x-3 "
-                        style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
-                        <p class="button-project">
-                            View the project
-                        </p>
-                        <div>
-                            <img src="./assets/images/Vector.svg" alt="">
-                        </div>
-                    </button>
+            <div class="flex justify-center">
+                <div class="reveal text-white my-[4rem] p-5 rounded-md"
+                    style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%); visibility: hidden; width: 40rem;">
+                    <div class="flex justify-center m-5">
+                        <img src="./assets/images/foto.svg" alt="">
+                    </div>
+                    <div class="text-white text-opacity-60 text-center text-xs m-5">
+                        <p id="project1">A responsive design allows users to enter a URL, generating a QR code on the
+                            screen
+                            for
+                            convenient
+                            use.</p>
+                    </div>
+                    <div class="flex justify-center" style="margin-top: 3rem;">
+                        <button class="flex space-x-3"
+                            style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
+                            <a class="button-project" href="vmc0sta.github.io/QR-CODE/"></a>
+                            <div>
+                                <img src="./assets/images/Vector.svg" alt="">
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="reveal text-white my-[4rem] p-5 rounded-md"
-                style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%); visibility: hidden;">
-                <div class="flex justify-center m-5">
-                    <img src="./assets/images/Screenshot_3 1.svg" alt="">
-                </div>
-                <div class="text-white text-opacity-60 text-center text-xs m-5">
-                    <p id="project3">This repo logs my Java learning at Entra21, covering basics to advanced Java,
-                        ending with a
-                        hands-on project.
-                    </p>
-                </div>
-                <div class="flex justify-center" style="margin-top: 3rem;">
-                    <button class="flex space-x-3 "
-                        style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
-                        <p class="button-project">
-                            View the project
+
+            <div class="flex justify-center">
+                <div class="reveal text-white my-[4rem] p-5 rounded-md"
+                    style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%); visibility: hidden; width: 40rem;">
+                    <div class="flex justify-center m-5">
+                        <img src="./assets/images/Screenshot_2 1.svg" alt="">
+                    </div>
+                    <div class="text-white text-opacity-60 text-center text-xs m-5">
+                        <p id="project2">In a responsive design, users can interactively choose a numerical rating from
+                            1 to
+                            5 stars.
                         </p>
-                        <div>
-                            <img src="./assets/images/Vector.svg" alt="">
-                        </div>
-                    </button>
+                    </div>
+                    <div class="flex justify-center" style="margin-top: 3rem;">
+                        <button class="flex space-x-3 "
+                            style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
+                             <a class="button-project" href="vmc0sta.github.io/classificacao-interativa/"></a>
+                            <div>
+                                <img src="./assets/images/Vector.svg" alt="">
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-center">
+                <div class="reveal text-white my-[4rem] p-5 rounded-md"
+                    style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%); visibility: hidden; width: 40rem;">
+                    <div class="flex justify-center m-5">
+                        <img src="./assets/images/Screenshot_3 1.svg" alt="">
+                    </div>
+                    <div class="text-white text-opacity-60 text-center text-xs m-5">
+                        <p id="project3">This repo logs my Java learning at Entra21, covering basics to advanced Java,
+                            ending with a
+                            hands-on project.
+                        </p>
+                    </div>
+                    <div class="flex justify-center" style="margin-top: 3rem;">
+                        <button class="flex space-x-3 "
+                            style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
+                            <a class="button-project" href="https://github.com/vmC0sta/Entra21">View the project</a>
+                            </p>
+                            <div>
+                                <img src="./assets/images/Vector.svg" alt="">
+                            </div>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -301,16 +312,24 @@
             </div>
             <h1 class="flex justify-center text-center text-white text-4xl m-5"
                 style="font-family: 'Crimson Text', serif;" id="title3">Know who I am</h1>
-            <p class=" text-white text-opacity-60 text-center font-normal" id="text-aboutMe">
-                I'm passionate about continuous learning! <br /><br /> I am participating in Entra21, a well-regarded
-                technology training program in Santa Catarina, Brazil. <br />My first exposure to the job market was at
-                the age of 14, at Unimed Alto Vale, where I gained a solid understanding of how businesses operate and
-                the benefits of cooperation. <br /><br />I have had the opportunity to lead a support team for Warehouse
-                Management System (WMS) at a technology company, where I dove into the business rules. <br />Now, my
-                next goal is to transition into the area of development. <br />In addition to my passion for technology,
-                I have a love for music, games, business, and books. <br /><br />My English proficiency is at an
-                intermediate level (B1). <br /><br />I'm always open to new connections and enjoy sharing experiences.
-            </p>
+            <div class="flex justify-center">
+                <p class=" text-white text-opacity-60 text-center font-normal" id="text-aboutMe" style="width: 40rem;">
+                    I'm passionate about continuous learning! <br /><br /> I am participating in Entra21, a
+                    well-regarded
+                    technology training program in Santa Catarina, Brazil. <br />My first exposure to the job market was
+                    at
+                    the age of 14, at Unimed Alto Vale, where I gained a solid understanding of how businesses operate
+                    and
+                    the benefits of cooperation. <br /><br />I have had the opportunity to lead a support team for
+                    Warehouse
+                    Management System (WMS) at a technology company, where I dove into the business rules. <br />Now, my
+                    next goal is to transition into the area of development. <br />In addition to my passion for
+                    technology,
+                    I have a love for music, games, business, and books. <br /><br />My English proficiency is at an
+                    intermediate level (B1). <br /><br />I'm always open to new connections and enjoy sharing
+                    experiences.
+                </p>
+            </div>
             <div class="reveal" style="visibility: hidden;">
                 <h2 class="flex justify-center text-center text-white text-5x1 m-5" id="subtitle2">Let’s now more about
                     me</h2>
@@ -341,7 +360,7 @@
             <div style="margin-top: 2rem;">
                 <div class="flex justify-center"">
                     <div>
-                        <span id="experience1" class=" text-white">
+                        <span id=" experience1" class=" text-white">
                     Technical Support,
                     </span>
                     <span style="color: #70FF00;">
@@ -355,8 +374,9 @@
                 id="date-experience1">
                 May 2022 - Nov 2023 / Rio do Sul, Brazil</p>
             </div>
-            <div>
-                <p class=" text-white text-opacity-50 text-base font-normal" id="descriptionExperience1">
+            <div class="flex justify-center">
+                <p class=" text-white text-opacity-50 text-center font-normal" id="descriptionExperience1"
+                    style=" width: 40rem;">
                     I lead a team as the main point of contact for clients on technical matters of the WMS system.
                     <br />Always keeping an eye on SLAs, ensuring that needs are met quickly and efficiently. <br />I
                     use SQL skills for database analysis and problem-solving. <br />I provide support to end-users to
