alterando url dos projetos

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <div class="flex justify-center" style="margin-top: 3rem;">
                         <button class="flex space-x-3"
                             style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
-                            <a class="button-project" href="vmc0sta.github.io/QR-CODE/"></a>
+                            <a class="button-project" href="https://vmc0sta.github.io/QR-CODE/"></a>
                             <div>
                                 <img src="./assets/images/Vector.svg" alt="">
                             </div>
@@ -271,7 +271,7 @@
                     <div class="flex justify-center" style="margin-top: 3rem;">
                         <button class="flex space-x-3 "
                             style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
-                             <a class="button-project" href="vmc0sta.github.io/classificacao-interativa/"></a>
+                             <a class="button-project" href="https://vmc0sta.github.io/classificacao-interativa/"></a>
                             <div>
                                 <img src="./assets/images/Vector.svg" alt="">
                             </div>
@@ -360,7 +360,7 @@
             <div style="margin-top: 2rem;">
                 <div class="flex justify-center"">
                     <div>
-                        <span id=" experience1" class=" text-white">
+                        <span id="experience1" class=" text-white">
                     Technical Support,
                     </span>
                     <span style="color: #70FF00;">
@@ -375,15 +375,9 @@
                 May 2022 - Nov 2023 / Rio do Sul, Brazil</p>
             </div>
             <div class="flex justify-center">
-                <p class=" text-white text-opacity-50 text-center font-normal" id="descriptionExperience1"
+                <p class="text-white text-opacity-50 text-center font-normal" id="descriptionExperience1"
                     style=" width: 40rem;">
-                    I lead a team as the main point of contact for clients on technical matters of the WMS system.
-                    <br />Always keeping an eye on SLAs, ensuring that needs are met quickly and efficiently. <br />I
-                    use SQL skills for database analysis and problem-solving. <br />I provide support to end-users to
-                    resolve system issues. This involves troubleshooting technical issues, explaining system
-                    functionalities, and ensuring users can effectively use the platform. <br />I work closely with the
-                    development team to identify flaws and optimize the system, providing feedback to improve system
-                    quality and efficiency. <br />I have experience in dealing with integrations and APIs.
+                </p>
             </div>
             </div>
         </section>
