texto alinhado a esquerda

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <h1 class="flex justify-center text-center text-white text-4xl m-5"
                 style="font-family: 'Crimson Text', serif;" id="title3">Know who I am</h1>
             <div class="flex justify-center">
-                <p class=" text-white text-opacity-60 text-center font-normal" id="text-aboutMe" style="width: 40rem;">
+                <p class=" text-white text-opacity-60 text-left font-normal" id="text-aboutMe" style="width: 40rem;">
                     I'm passionate about continuous learning! <br /><br /> I am participating in Entra21, a
                     well-regarded
                     technology training program in Santa Catarina, Brazil. <br />My first exposure to the job market was
@@ -375,7 +375,7 @@
                 May 2022 - Nov 2023 / Rio do Sul, Brazil</p>
             </div>
             <div class="flex justify-center">
-                <p class="text-white text-opacity-50 text-center font-normal" id="descriptionExperience1"
+                <p class="text-white text-opacity-50 text-left font-normal" id="descriptionExperience1"
                     style=" width: 40rem;">
                 </p>
             </div>
